# document_ai

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  environment.yaml  pyproject.toml
demo/: run_demo.sh  send_demo_requests.py
src/: app_main.py  constants.py  layout_detector.py  metrics.py  plotting.py  serialization.py  types_.py
