[tool.black]
line-length = 100
target-version = ['py310']
include = '\.py$'
exclude = '''
/(
  | \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "document_ai"
version = "0.0.0"
description = ""
authors = ["Antoni Maciag <antoni.maciag1@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"

black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
common = "*"
paddleocr = "2.7.2"
paddlepaddle = "*"
numpy = "1.*"
fastapi = "^0.116.1"
requests = "^2.32.4"
uvicorn = "^0.35.0"
types-requests = "^2.32.4.20250611"
python-multipart = "^0.0.20"
